Fix content overflow

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -35,11 +35,16 @@ body {
 .preview-card {
     display: grid;
     overflow: hidden;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 50% 50%;
     width: 600px;
     border-radius: 10px;
     background-color: colors.$white;
     min-height: 450px;
+
+    &__image {
+        height: 100%;
+        object-fit: cover;
+    }
 
     &__wrapper {
         padding: 32px;
